Fixed CSS change broken in last merge

--- a/django/sarpaminfohub/media/sarpam.css
+++ b/django/sarpaminfohub/media/sarpam.css
@@ -384,11 +384,11 @@ span {
 }
 
 #pricegraph .graph .median_fob_price {
-	border-color: #fc0;
+	border-color: #fc8;
 }
 
 #pricegraph .graph .median_landed_price {
-	border-color: #f0c;
+	border-color: #caf;
 }
 
 dl {
